# temp-voice

./: Cargo.toml
src/: error.rs  guild_manager.rs  lib.rs  voice_channel_manager.rs
src/commands/: bitrate.rs  block.rs  claim.rs  create.rs  delete.rs  invite.rs  join.rs  kick.rs  limit.rs  mod.rs  name.rs  password.rs  persist.rs  privacy.rs  region.rs  reset.rs  setup.rs  transfer.rs  trust.rs  unblock.rs  untrust.rs
src/events/: channel_creator.rs  channel_deleter.rs  guild_create.rs  mod.rs
src/events/voice_state_update/: channel_creator.rs  channel_deleter.rs  mod.rs  spectate.rs
